--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+  *::-webkit-scrollbar {
+    display: none; /* Hides the scrollbar completely */
+  }
+
   body {
     @apply font-sans text-neutral-800 dark:text-neutral-100 bg-neutral-50 dark:bg-secondary-900;
   }
@@ -16,7 +20,7 @@
   :root {
     /* Light Theme (Complementary to the new dark theme) */
     --background: 0 0% 100%; /* White */
-    --foreground: 260 5% 15%; /* Dark, almost black text */
+    --foreground: 260 5% 5%; /* Dark, almost black text */
     
     --card: 0 0% 97%; /* Very light grey for cards */
     --card-foreground: 260 5% 15%;
@@ -143,7 +147,7 @@
   }
   
   .input {
-    @apply w-full px-4 py-3 border border-neutral-200 dark:border-secondary-700 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-300 dark:focus:ring-primary-600 bg-white dark:bg-secondary-800 text-neutral-800 dark:text-neutral-100;
+    @apply w-full px-4 py-3 border border-neutral-200 dark:border-secondary-800 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-300 dark:focus:ring-primary-600 bg-white dark:bg-secondary-900 text-foreground placeholder-neutral-400 dark:placeholder-neutral-700;
   }
   
   .card {
@@ -175,7 +179,7 @@
   bottom: -4px;
   left: 0;
   background-color: theme('colors.primary.500');
-  transition: width 0.3s;
+  transition: width 0.4s;
 }
 
 .nav-link:hover::after,
@@ -183,12 +187,36 @@
   width: 100%;
 }
 
-.calendar-container .react-calendar {
-  @apply w-full max-w-full bg-white dark:bg-secondary-800 border border-neutral-200 dark:border-secondary-700 rounded-lg font-sans;
+.react-calendar {
+  @apply w-full max-w-full bg-white dark:bg-transparent rounded-lg font-sans;
 }
 
 .calendar-container .react-calendar button {
   @apply m-0 border-0 outline-none;
+}
+
+.react-calendar__navigation {
+  @apply border-b-2 border-neutral-100 dark:border-neutral-800;
+}
+
+.react-calendar__navigation__arrow:enabled:hover,
+.react-calendar__navigation__arrow:enabled:focus,
+.react-calendar__navigation__label:enabled:hover,
+.react-calendar__navigation__label:enabled:focus {
+  @apply bg-primary-400 dark:bg-primary-600  !important;
+}
+
+.react-calendar__navigation__arrow:disabled,
+.react-calendar__navigation__label:disabled {
+  @apply hidden;
+}
+
+.react-calendar__navigation__arrow--active {
+  @apply text-primary-600;
+}
+
+.react-calendar__navigation__label {
+  @apply text-foreground;
 }
 
 .calendar-container .react-calendar__tile {
@@ -196,7 +224,7 @@
 }
 
 .calendar-container .react-calendar__tile--now {
-  @apply bg-primary-100 dark:bg-primary-900 rounded;
+  @apply bg-primary-100 dark:bg-primary-700 rounded;
 }
 
 .calendar-container .react-calendar__tile--active {
@@ -205,7 +233,7 @@
 
 .calendar-container .react-calendar__tile:enabled:hover,
 .calendar-container .react-calendar__tile:enabled:focus {
-  @apply bg-primary-200 dark:bg-primary-900 rounded;
+  @apply bg-primary-200 dark:bg-primary-800 rounded;
 }
 
 .calendar-container .react-calendar__tile--disabled {
